// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markets should render 1`] = `
<div
  className="cr-markets"
>
  <Component
    data={
      Array [
        Array [
          "ETH/BTC",
          "0.223100",
          <span
            className="__positive"
          >
            +50.00%
          </span>,
        ],
        Array [
          "ETH/LTC",
          "0.223100",
          <span
            className="__positive"
          >
            +25.00%
          </span>,
        ],
        Array [
          "LTC/BTC",
          "0.223100",
          <span
            className="__negative"
          >
            -5.00%
          </span>,
        ],
      ]
    }
    filters={Array []}
    header={
      Array [
        "Pair",
        "Price",
        "24h Change",
      ]
    }
    onSelect={[Function]}
    titleComponent="Markets"
  />
  <FilterInput
    data={
      Array [
        Array [
          "ETH/BTC",
          "0.223100",
          "+50.00%",
        ],
        Array [
          "ETH/LTC",
          "0.223100",
          "+25.00%",
        ],
        Array [
          "LTC/BTC",
          "0.223100",
          "-5.00%",
        ],
      ]
    }
    filter={[Function]}
    placeholder=""
  />
</div>
`;

exports[`Markets should render empty data 1`] = `
<div
  className="cr-markets"
>
  <Component
    data={Array []}
    filters={Array []}
    header={
      Array [
        "Pair",
        "Price",
        "24h Change",
      ]
    }
    onSelect={[Function]}
    titleComponent="Markets"
  />
  <FilterInput
    data={Array []}
    filter={[Function]}
    placeholder=""
  />
</div>
`;
